--- a/turkishtea-webapp/src/main/webapp/TurkishTeaMessenger.css
+++ b/turkishtea-webapp/src/main/webapp/TurkishTeaMessenger.css
@@ -2,7 +2,7 @@
 
 
 /** Example rules used by the template application (remove for your app) */
-h1 {
+.h1 {
   font-size: 2em;
   font-weight: bold;
   color: #777777;
@@ -136,6 +136,25 @@ h1 {
     display: inline-block;
 }
 
-#closeButton {
+.dialogButton {
   margin: 15px 6px 6px;
+}
+
+.image {
+    width: 180px;
+    height: 120px;
+    margin: 60px 0px 10px;
+    text-align: center;
+    display: inline-block;
+}
+
+.hPanel {
+    width: 100%;
+    text-align: center;
+}
+
+.vPanel {
+    width: 180px;
+    text-align: center;
+    display: inline-block;
 }
